--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,4 @@ rvm:
  - rbx
 # uncomment this line if your project needs to run something other than `rake`:
 # script: bundle exec rspec spec
+# added comment for push to check travisCI
