--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 rvm:
  - "2.2.2"
- - rbx
+ #- rbx  <--this was failing, may need to uncomment depending on gabe's feedback
+ 
 # uncomment this line if your project needs to run something other than `rake`:
 # script: bundle exec rspec spec
-# added comment for push to check travisCI
