--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,8 +1,40 @@
-languages:
-  Ruby: true
-  JavaScript: true
-  PHP: true
-  Python: true
+---
+engines:
+  brakeman:
+    enabled: true
+  bundler-audit:
+    enabled: true
+  csslint:
+    enabled: true
+  duplication:
+    enabled: true
+    config:
+      languages:
+      - ruby
+      - javascript
+      - python
+      - php
+  eslint:
+    enabled: true
+  fixme:
+    enabled: true
+  rubocop:
+    enabled: true
+ratings:
+  paths:
+  - Gemfile.lock
+  - "**.erb"
+  - "**.haml"
+  - "**.rb"
+  - "**.rhtml"
+  - "**.slim"
+  - "**.css"
+  - "**.inc"
+  - "**.js"
+  - "**.jsx"
+  - "**.module"
+  - "**.php"
+  - "**.py"
 exclude_paths:
-- "features/step_definitions/web_steps.rb"
-- "app/assets/javascripts/fileinput.js"
+- features/step_definitions/web_steps.rb
+- app/assets/javascripts/fileinput.js
