--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ rvm:
  - "2.2.2"
 cache: bundler
 
+before_script:
+  - bundle exec rake db:migrate
+  - bundle exec rake db:test:prepare
+script:
+  - bundle exec rake cucumber
+  - bundle exec rake spec/
 addons:
     code_climate:
         repo_token: ee1be2e33de94a5a554fd83b6873adfe41421e9456235b2e621e6d299bdc2f1f
